--- a/OmneFictio.MinApi/OmneFictio.MinApi.csproj
+++ b/OmneFictio.MinApi/OmneFictio.MinApi.csproj
@@ -15,5 +15,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
   </ItemGroup>
 </Project>
