--- a/OmneFictio.MinApi/OmneFictio.MinApi.csproj
+++ b/OmneFictio.MinApi/OmneFictio.MinApi.csproj
@@ -16,5 +16,6 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
   </ItemGroup>
 </Project>
