--- a/OmneFictio.Web/OmneFictio.Web.csproj
+++ b/OmneFictio.Web/OmneFictio.Web.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -6,6 +6,7 @@
     <UserSecretsId>7fd1a078-7308-4361-97dd-a0bef5c413f8</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.7"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0"/>
   </ItemGroup>
 </Project>
