--- a/OmneFictio.MinApi/OmneFictio.MinApi.csproj
+++ b/OmneFictio.MinApi/OmneFictio.MinApi.csproj
@@ -17,5 +17,6 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+    <PackageReference Include="EntityFramework" Version="6.4.4"/>
   </ItemGroup>
 </Project>
