--- a/OmneFictio.MinApi/OmneFictio.MinApi.csproj
+++ b/OmneFictio.MinApi/OmneFictio.MinApi.csproj
@@ -18,5 +18,6 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
     <PackageReference Include="EntityFramework" Version="6.4.4"/>
+    <PackageReference Include="Google.Apis.Auth" Version="1.57.0"/>
   </ItemGroup>
 </Project>
