--- a/OmneFictio.Web/OmneFictio.Web.csproj
+++ b/OmneFictio.Web/OmneFictio.Web.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.7"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0"/>
+    <PackageReference Include="Google.Apis.Auth" Version="1.57.0"/>
   </ItemGroup>
 </Project>
