--- a/OmneFictio.WebApi/OmneFictio.WebApi.csproj
+++ b/OmneFictio.WebApi/OmneFictio.WebApi.csproj
@@ -11,5 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9"/>
     <PackageReference Include="EntityFramework" Version="6.4.4"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0"/>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+    <PackageReference Include="Google.Apis.Auth" Version="1.57.0"/>
   </ItemGroup>
 </Project>
