--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,27 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (minapi)",
+            "name": "OF (WebApi)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/OmneFictio.WebApi/bin/Debug/net6.0/OmneFictio.WebApi.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/OmneFictio.WebApi",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            "name": "OF (minapi)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -25,7 +45,7 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (web)",
+            "name": "OF (web)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
